fixed off-centered button

--- a/client/src/components/Styles/projects.css
+++ b/client/src/components/Styles/projects.css
@@ -327,6 +327,10 @@ Project Creator and Editor Popup style rules
   cursor: pointer;
 }
 
+#team-add-member-add-button {
+  margin: 0;
+}
+
 .profile-editor-save {
   margin-top: 37px;
   margin-bottom: 28px;
